--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,138 @@
+:root{
+    --primary: #F44174;
+    --secundary-light: #B8F2E6;
+    --secundary-dark: #AED9E0;
+    --white: #F3EFE0;
+    --black: #2C4251;
+    --darker: #091A26;
+}
+
+/* TUDO */
+*{
+    padding: 0px;
+    margin: 0px;
+}
+
 /* HTML */
 html{
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
 }
 
 /* BODY */
 body{
-    min-height: 100vh;
-    min-width: 100vh;
+    max-height: 100vh;
+    max-width: 100vw;
+    background-color: var(--black);
 }
 
-/* FORM */
+.btn-primary{
+    background-color: var(--primary);
+    color: var(--white);
+    border-color: var(--primary);
+}
 
-form button:hover{
+.btn-primary:hover{
     background-color: transparent;
-    
+    color: var(--primary);
+    border-color: var(--primary);
+}
+
+.btn-primary:focus{
+    background-color: var(--primary);
+    color: var(--white);
+    border-color: var(--primary);
+    box-shadow: none;
+}
+
+.btn-secundary{
+    background-color: var(--secundary-light);
+    color: var(--black);
+    border-color: var(--secundary-light);
+}
+
+.btn-secundary:hover{
+    background-color: transparent;
+    color: var(--primary);
+    border-color: var(--primary);
+}
+
+
+/* -- HOME -- */
+.header{
+    height: 85vh;
+    background: var(--black);
+    background: linear-gradient(180deg, var(--darker) 80%, var(--black) 100%);
+}
+
+.img-header{
+    max-width: 600px;
+    height: auto;
+}
+
+.dshape-logo{
+    max-width: 450px;
+    height: auto;
+}
+
+.btn-infs{
+    border-radius: 50%;
+    padding: 20px;
+}
+
+.btn-infs:focus{
+    background-color: var(--primary);
+    color: var(--white);
+    box-shadow: none;
+    border-color: var(--primary);
+}
+
+.card-infos{
+    background-color: var(--black);
+    border: none !important;
+}
+
+/* -area de informações- */
+.img-info{
+    margin: 0px;
+    width: 500px;
+    height: auto;
+}
+
+/* -area de login- */
+#login-area{
+    height: 100vh;
+    background-image: url('../img/login-bg.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card-login{
+    background-color: var(--darker);
+    color: var(--white);
+    width: 500px;
+}
+
+.input-login{
+    background-color: var(--darker);
+    color: var(--black);
+    border: 2px solid var(--black);
+    transition: .3s;
+}
+
+.input-login:hover{
+    background-color: var(--darker);
+    border: 2px solid var(--secundary-dark);
+    box-shadow: none !important;
+}
+
+.input-login:focus{
+    background-color: var(--darker);
+    color: var(--white);
+    border: 2px solid var(--secundary-light);
+    box-shadow: none !important;
+}
+
+.label-login{
+    color: var(--black);
 }
